--- a/templates/warehousing/admin/content/request.html
+++ b/templates/warehousing/admin/content/request.html
@@ -82,6 +82,7 @@
                                     <tr>
                                         <th>Request ID</th>
                                         <th>Request Date</th>
+                                        <th>Requestor</th>
                                         <th>Request Type</th>
                                         <th>Status</th>
                                         <th>Actions</th>
