--- a/templates/warehousing/admin/default/base.html
+++ b/templates/warehousing/admin/default/base.html
@@ -266,7 +266,7 @@
                         </a>
                     </li>
                     <!-- Reports -->
-                    <li class="nav-header"><b>Reports In/Out</b></li>
+                    <li class="nav-header"><b>Request and Return</b></li>
                     <li class="nav-item">
                         <a href="/warehousing/admin/request" class="nav-link" id="request_sidebar">
                             <script>if(window.location.pathname == '/warehousing/admin/request/'){document.getElementById("request_sidebar").classList.add('active')}</script>
@@ -274,6 +274,14 @@
                             <p> Request </p>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="/warehousing/admin/request" class="nav-link" id="request_sidebar">
+                            <script>if(window.location.pathname == '/warehousing/admin/request/'){document.getElementById("request_sidebar").classList.add('active')}</script>
+                            <i class="nav-icon fas fa-envelope-open-text"></i>
+                            <p> Return </p>
+                        </a>
+                    </li>
+                    <li class="nav-header"><b>Reports In/Out</b></li>
                     <li class="nav-item">
                         <a href="/warehousing/admin/outbound_reports"  class="nav-link" id="outbound_report_sidebar">
                             <script>if(window.location.pathname == '/warehousing/admin/outbound_reports/'){document.getElementById("outbound_report_sidebar").classList.add('active')}</script>
