--- a/templates/warehousing/admin/content/employees.html
+++ b/templates/warehousing/admin/content/employees.html
@@ -35,7 +35,7 @@
             <div class="row">     
                 <!-- Button -->
                 <div class="col-sm-6">
-                    <a href="#" class="btn btn-success">Add New Employee</a>
+                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Employee</a>
                     <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
                 </div>
                 <!-- / Button -->
@@ -105,6 +105,208 @@
         <!-- /.container-fluid -->
     </section>
     <!-- /.content -->
+
+     <!-- Adding Employee Modal -->
+     <div class="modal fade" id="adding_modal">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Employee Form</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- CONTENT -->
+                    <form id="form_id" name="form_id" enctype="multipart/form_data">
+                        <div class="card-body">
+                            <div class="row">
+                                <input type="hidden" name="uuid" id="uuid" value="" />
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="user_id" id="user_idLabel">User</label>
+                                        <select class="form-control" id="user_id" name="user_id">
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                               <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="user_type">Employee Type</label>
+                                        <select class="form-control" id="user_type" name="user_type">
+                                            <option value="Manager">Manager</option>
+                                            <option value="Staff">Staff</option>
+                                            <option value="Driver">Driver</option>
+                                             <option value="Department Manager">Department Manager</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="employee_first_name" id="employee_first_nameLabel">First Name</label>
+                                        <input type="input" class="form-control" id="employee_first_name" placeholder="First Name" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="employee_middle_name" id="employee_middle_nameLabel">Middle Name</label>
+                                        <input type="input" class="form-control" id="employee_middle_name" placeholder="Middle Name">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="employee_last_name" id="employee_last_nameLabel">Last Name</label>
+                                        <input type="input" class="form-control" id="employee_last_name" placeholder="Last Name" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="employee_age" id="employee_ageLabel">Age</label>
+                                        <input type="number" class="form-control" id="employee_age" placeholder="Enter Employee Age" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="employee_contact" id="employee_contactLabel">Contact #</label>
+                                        <input type="number" class="form-control" id="employee_contact" placeholder="Enter Employee Contact#" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="employee_address" id="employee_addressLabel">Address </label>
+                                        <input type="input" class="form-control" id="employee_address" placeholder="Enter Employee Address" required>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="Submit" class="btn btn-primary" id="button_add">Add</button>
+                            </div>
+                            <!-- END BUTTONS -->
+                        </div>
+                    </form> <!-- END CONTENT -->
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Adding Employee Modal -->
+
+    <!-- Editing User Modal -->
+    <div class="modal fade" id="editing_modal">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Edit Employee</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal_viewing">
+                    <!-- CONTENT -->
+                    <form id="e_form_id" name="e_form_id" enctype="multipart/form_data">
+                        <div class="card-body">
+                            <div class="row">
+                                <input type="hidden" name="e_uuid" id="e_uuid" value="" />
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_user_id" id="e_user_idLabel">User</label>
+                                        <select class="form-control" id="e_user_id" name="e_user_id">
+                                            <option value="">Not a System User</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                               <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_user_type">Employee Type</label>
+                                        <select class="form-control" id="e_user_type" name="e_user_type">
+                                            <option value="Manager">Manager</option>
+                                            <option value="Staff">Staff</option>
+                                            <option value="Driver">Driver</option>
+                                            <option value="Department Manager">Department Manager</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_employee_first_name" id="e_employee_first_nameLabel">First Name</label>
+                                        <input type="input" class="form-control" id="e_employee_first_name" placeholder="First Name" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_employee_middle_name" id="e_employee_middle_nameLabel">Middle Name</label>
+                                        <input type="input" class="form-control" id="e_employee_middle_name" placeholder="Middle Name">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_employee_last_name" id="e_employee_last_nameLabel">Last Name</label>
+                                        <input type="input" class="form-control" id="e_employee_last_name" placeholder="Last Name" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_employee_age" id="e_employee_ageLabel">Age</label>
+                                        <input type="number" class="form-control" id="e_employee_age" placeholder="Enter Employee Age" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_employee_contact" id="e_employee_contactLabel">Contact #</label>
+                                        <input type="number" class="form-control" id="e_employee_contact" placeholder="Enter Employee Contact#" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_employee_address" id="e_employee_addressLabel">Address </label>
+                                        <input type="input" class="form-control" id="e_employee_address" placeholder="Enter Employee Address" required>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="Submit" class="btn btn-primary" id="button_save">Save</button>
+                            </div>
+                            <!-- END BUTTONS -->
+                        </div>
+                    </form> <!-- END CONTENT -->
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Editing User Modal -->
+
 {%endblock%}
 
 {%block scripts%}
