--- a/templates/warehousing/admin/content/warehouses.html
+++ b/templates/warehousing/admin/content/warehouses.html
@@ -35,7 +35,7 @@
             <div class="row">     
                 <!-- Button -->
                 <div class="col-sm-6">
-                    <a href="#" class="btn btn-success">Add New Warehouse</a>
+                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Warehouse</a>
                     <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
                 </div>
                 <!-- / Button -->
@@ -50,7 +50,7 @@
         <!-- {%for user in users%}
             <div class="card card-outline card-primary w-75">
                 <div class="card-header">
-                    <div class="h3">ID: {{user.user_id}}</div>
+                    <div class="h3">ID: {{user.employee_id}}</div>
                     <div class="subtitle">Email: {{user.user_email}}</div>
                 </div>
                 <div class="card-body">
@@ -102,6 +102,148 @@
         <!-- /.container-fluid -->
     </section>
     <!-- /.content -->
+
+    <!-- Adding Warehouse Modal -->
+    <div class="modal fade" id="adding_modal">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Warehouse Form</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- CONTENT -->
+                    <form id="form_id" name="form_id" enctype="multipart/form_data">
+                        <div class="card-body">
+                            <div class="row">
+                                <input type="hidden" name="uuid" id="uuid" value="" />
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="warehouse_manager_id" id="warehouse_manager_idLabel">Warehouse Manager</label>
+                                        <select class="form-control" id="warehouse_manager_id" name="warehouse_manager_id">
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="warehouse_name" id="warehouse_nameLabel">Warehouse Name</label>
+                                        <input type="input" class="form-control" id="warehouse_name" placeholder="Warehouse Name" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="warehouse_contact" id="warehouse_contactLabel">Contact #</label>
+                                        <input type="number" class="form-control" id="warehouse_contact" placeholder="Enter Warehouse Contact#" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="warehouse_address" id="warehouse_addressLabel">Address </label>
+                                        <input type="input" class="form-control" id="warehouse_address" placeholder="Enter Warehouse Address" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="warehouse_description" id="warehouse_descriptionLabel">Description </label>
+                                        <input type="input" class="form-control" id="warehouse_description" placeholder="Enter Warehouse Description" required>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="Submit" class="btn btn-primary" id="button_add">Add</button>
+                            </div>
+                            <!-- END BUTTONS -->
+                        </div>
+                    </form> <!-- END CONTENT -->
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Adding Warehouse Modal -->
+
+    <!-- Editing Warehouse Modal -->
+    <div class="modal fade" id="editing_modal">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Edit Warehouse</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal_viewing">
+                    <!-- CONTENT -->
+                    <form id="e_form_id" name="e_form_id" enctype="multipart/form_data">
+                        <div class="card-body">
+                            <div class="row">
+                                <input type="hidden" name="e_uuid" id="e_uuid" value="" />
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_warehouse_manager_id" id="e_warehouse_manager_idLabel">Warehouse Manager</label>
+                                        <select class="form-control" id="e_warehouse_manager_id" name="e_warehouse_manager_id">
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_warehouse_name" id="e_warehouse_nameLabel">Warehouse Name</label>
+                                        <input type="input" class="form-control" id="e_warehouse_name" placeholder="Warehouse Name" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_warehouse_contact" id="e_warehouse_contactLabel">Contact #</label>
+                                        <input type="number" class="form-control" id="e_warehouse_contact" placeholder="Enter Warehouse Contact#" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_warehouse_address" id="e_warehouse_addressLabel">Address </label>
+                                        <input type="input" class="form-control" id="e_warehouse_address" placeholder="Enter Warehouse Address" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_warehouse_description" id="e_warehouse_descriptionLabel">Description </label>
+                                        <input type="input" class="form-control" id="e_warehouse_description" placeholder="Enter Warehouse Description" required>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="Submit" class="btn btn-primary" id="button_save">Save</button>
+                            </div>
+                            <!-- END BUTTONS -->
+                        </div>
+                    </form> <!-- END CONTENT -->
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Editing User Modal -->
 {%endblock%}
 
 {%block scripts%}
